--- a/case_study/bai_9.html
+++ b/case_study/bai_9.html
@@ -7,7 +7,7 @@
 <body>
 <script>
     function checkArray(arr) {
-        for (let i = 0; i < arr.length; i += 2) {
+        for (let i = 0; i < arr.length-1; i += 2) {
             if (arr[i] >= arr[i + 1]) {
                 return 'NO';
             }
