--- a/bai_tap_cuoi_module/bai_1.html
+++ b/bai_tap_cuoi_module/bai_1.html
@@ -15,7 +15,7 @@
                 count++;
             }
         }
-        return sum / count;
+        alert('Trung bình của các phần tử chia hết cho 5 ở vị trí chia hết cho 3: ' + sum / count);
     }
 
     let arrLength = prompt('Nhập độ dài mảng <=50');
@@ -30,8 +30,8 @@
         }
         array.push(child);
     }
-    console.log('Mảng vừa nhập là: ' + array);
-    console.log('Trung bình của các phần tử chia hết cho 5 ở vị trí chia hết cho 3: ' + total(array));
+    alert('Mảng vừa nhập là: ' + array);
+    total(array);
 </script>
 </body>
 </html>
