--- a/bai_thi/bai_4.html
+++ b/bai_thi/bai_4.html
@@ -28,21 +28,9 @@
     table();
 
     function table() {
-        let name = [];
+        workers.sort(compareWorker);
         for (let i = 0; i < workers.length; i++) {
-            name.push(workers[i].name);
-        }
-        name.sort();
-        let newWorkers = [];
-        let count = 0;
-        for (let i = 0; i < name.length; i++) {
-            for (let j = 0; j < workers.length; j++) {
-                if (workers[j].name === name[i]) {
-                    count++;
-                    workers[j].order = count;
-                    newWorkers.push(workers[j]);
-                }
-            }
+            workers[i].order = i + 1;
         }
         let tableString = `<tr>
                              <th>STT</th>
@@ -52,17 +40,27 @@
                              <th>Lương</th>
                              <th>Chức vụ</th>
                            </tr>`;
-        for (let i = 0; i < newWorkers.length; i++) {
+        for (let i = 0; i < workers.length; i++) {
             tableString += `<tr>
-                               <td>${newWorkers[i].order}</td>
-                               <td>${newWorkers[i].name}</td>
-                               <td>${newWorkers[i].dateOfBirth}</td>
-                               <td>${newWorkers[i].address}</td>
-                               <td>${newWorkers[i].income}</td>
-                               <td>${newWorkers[i].jobTitle}</td>
+                               <td>${workers[i].order}</td>
+                               <td>${workers[i].name}</td>
+                               <td>${workers[i].dateOfBirth}</td>
+                               <td>${workers[i].address}</td>
+                               <td>${workers[i].income}</td>
+                               <td>${workers[i].jobTitle}</td>
                              </tr>`;
         }
         document.getElementById("table").innerHTML = tableString;
+    }
+
+    function compareWorker(a, b) {
+        if (a.name < b.name) {
+            return -1;
+        }
+        if (a.name > b.name) {
+            return 1;
+        }
+        return 0;
     }
 </script>
 </body>
